# siyuan

./: .gitignore  README.md  README_ja_JP.md  README_tr_TR.md  README_zh_CN.md  justfile
.github/: CONTRIBUTING.md  CONTRIBUTING_zh_CN.md
.github/workflows/: cd-tauri.yml
app/: package.json  pnpm-lock.yaml  webpack.config.js  webpack.desktop.js  webpack.export.js  webpack.mobile.js  webpack.tauri.js
app/appearance/langs/: ar_SA.json  de_DE.json  en_US.json  es_ES.json  fr_FR.json  he_IL.json  it_IT.json  ja_JP.json  ko_KR.json  pl_PL.json  pt_BR.json  ru_RU.json  sk_SK.json  tr_TR.json  zh_CHT.json  zh_CN.json
app/backend/: Cargo.toml  tauri.conf.json
app/backend/capabilities/: default.json
app/backend/icons/: icon.icns
app/backend/src/: kernel.rs  lib.rs  main.rs  tray.rs
app/src/: index.ts
app/src-tauri/: tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  kernel.rs  lib.rs
app/src/boot/: onGetConfig.ts
app/src/card/: openCard.ts
app/src/config/: about.ts  appearance.ts  editor.ts  exportConfig.ts  keymap.ts
app/src/dialog/: processSystem.ts
app/src/editor/: openLink.ts  util.ts
app/src/layout/: Tab.ts  Wnd.ts  status.ts  topBar.ts
app/src/menus/: commonMenuItem.ts  index.ts  navigation.ts  util.ts  workspace.ts
app/src/platform/: browser.ts  electron.ts  index.ts  tauri.ts  types.ts
app/src/plugin/: platformUtils.ts
app/src/types/: config.d.ts
kernel/conf/: appearance.go
scripts/: darwin-build.sh  linux-build.sh  parse-changelog-HEAD.py  win-build.bat
scripts/_pkg/: Utils.py
(+19 files in other folders)
